<resources>
    <string name="app_name">Mi Inventario</string>
    <string name="inicia">Inicia Sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="titulo">Mi\nInventario</string>
    <string name="primerTitulo">Bienvenida a</string>
    <string name="segundoTitulo">Mi Inventario</string>
    <string name="facebook_app_id">608874139289668</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="licence">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAknSrSV03llKOOB91pr4E4MM1Wha5RynIPTnl+wuef07VockDMDTOdv3Ga9+212lHEu/I4LJBiEq60u8l+XQe/baJUryKgZm3THv2kR2OnmZl62Zp91sEaR2YZTHTW56BatS9BLY17NUuOxokjS+6HEoz8p7NznOCKAP+wuzUkZujy1GILiH9Qp/Rgu1oxQI6UnhI/cvg2SpXAOVyLJyDK+Oi4dvqkEpWU2t7+X/mIRnXiwdjcTuuk6VzfvsYJv5iWYK/xj6UKqTqb+nIGqykH97fFZBE+1eOcOf3J9v5O0KPVy+WsDBnuJP6NDDb3qLJSt2+cel9+rckx1ZexeYG2wIDAQAB</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regresar">regresar</string>


    <string-array name="dias">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

</resources>
